# DistributedFunSearch

./: .gitignore  .gitnore  README.md  env.yml  load_llm.py  pyproject.toml  test_parser_direct.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.ssh/: known_hosts
LRZ/: config.py  evaluator.py  funsearch.py  funsearch_e.py  funsearch_s.py  programs_database.py  rabbitmq.conf  sampler.py  sandbox.py  sim.py  specification.txt  temp_1.sbatch  update_config_file.py  visual.py
LRZ/container/: container_main.py
Lit_review/: fazellicullina.py
analysis/: README.md  __init__.py  checkpoint_analyzer.py  example_analysis.py  plot_evolution.py
docs/: CLUSTER_SETUP.md  CONFIGURATION.md  DOCKER_SETUP.md  SCALING.md
implementation/: BIS_test.py  attach_eval.py  attach_sampler.py  checkpoint.pkl  checkpoint_1725895448.pkl  checkpoint_1725896049.pkl  code_manipulation.py  config.py  evaluator.py  example.py  funsearch.py  funsearch.sh  funsearch_e.py  funsearch_gpt.py  funsearch_s.py  funsearch_s_gpt.py  gpt.py  grid_search.py  grid_search.sh  grid_search_gpu.sh  llama.py  llamaCode.py  llama_grid.py  perf_tracker.py  profiling.py  programs_database.py  read.py  sampler.py  sandbox.py  scaling_utils.py  sim_tracker.py  specification.txt  specification_instruct.txt  starcoder.py  start_and_sleep.sh  try.py  update_config.py  visual.py  visualize_graph.py  write.py
implementation/Best/: VT_code.py  best_programs.py  compare.py  compare_solutions.py  deduplicate.py  deduplicate_hash.py  eval_best_programs.py  evaluate.py  filter_best.py  hashing.py
implementation/ChachingFace/: download_llm.py
implementation/container/: container_main.py
implementation/paramTuning/: grid_search.py
src/construct_graphs/: README.md  construct_deletions_graphs.py  construct_ids_graphs.py
src/decos/: __main__.py  attach_evaluators.py  attach_samplers.py  code_manipulation.py  gpt.py  (+6 more)
(+300 files in other folders)
