[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "decos"
version = "0.1.0"
description = "DeCoSearch package"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
  "transformers",
  "openai",
  "aio-pika",
  "yarl",
  "psutil",
  "GPUtil",
  "memory-profiler",
  "cloudpickle",
  "nvidia-ml-py",
  "accelerate",
  "lmdb",
  "python-Levenshtein",
  "tqdm",
  "wandb",
  "matplotlib",
  "tabulate",
  "networkx"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
decos = "decos.decos:main"
